# reserqach-agent

./: .env  .gitignore  AUTONOMOUS_CODING_README.md  FINAL_UNIFIED_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LLM_COUNCIL_INTEGRATION.md  QUICKSTART.md  QUICKSTART_AUTONOMOUS.md  README.md  README_UNIFIED.md  START_HERE.md  STRUCTURE_GUIDE.py  USING_AUTONOMOUS_CODING.md  config.py  config_enhanced.py  create_repo.py  create_repo_v2.py  create_test_data.py  demo_autonomous_coding.py  demo_simple.py  final_paper.docx  llm_api_integration.py  main.py  main_autonomous.py  main_autonomous_with_council.py  main_with_council.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start_word_server.ps1  test_autonomous_coding.py  test_mcp_connection.py
agents/: __init__.py  analyzer.py  autonomous_coder.py  code_executor.py  self_healer.py  visualizer.py
research-paper-writer/: AI_Agents_and_the_AI_Hallucination_Bubble.docx  COMPLETE_VALIDATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTERNET_RESOURCES_AND_LEARNING.md  OPTIMIZATION_AND_MULTIAGENT_GUIDE.md  QUICK_START.md  The_Impact_of_Agentic_AI_on_Software_Engineering.docx  browser_mcp_learning.py  config.py  debug_sse.py  examples_and_demos.py  main.py  pyproject.toml  requirements.txt  test_browser.py  test_perplexity.py  test_tavily.py  test_word.py
research-paper-writer/agents/: multi_agent_framework.py  orchestrator.py  planner.py  researcher.py  smolagents_advanced.py  verifier.py  writer.py
research-paper-writer/signatures/: academic.py
research-paper-writer/tools/: mcp_tools.py  token_optimizer.py
(+110 files in other folders)
