[project]
name = "data-science-system"
version = "0.1.0"
description = "An intelligent, autonomous system that analyzes datasets, generates hypotheses, performs statistical testing, builds predictive models, and provides actionable insights with LLM Council integration."
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "chromadb>=1.4.1",
    "dspy-ai>=3.1.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "litellm>=1.81.1",
    "loguru>=0.7.3",
    "markdown>=3.10.1",
    "matplotlib>=3.10.0",
    "mcp>=1.25.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "smolagents>=1.24.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.53.1",
    "sweetviz>=2.3.1",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.19",
    "ydata-profiling>=4.18.1",
]
